# xapian-meson

./: Makefile.in  aclocal.m4  compile  config.h.in  configure  docsource.mk  meson.build  meson.options  xapian-config.1  xapian-core.spec
api/: meson.build
backends/: meson.build
backends/chert/: meson.build
backends/glass/: meson.build
common/: safesysstat.h
docs/: Makefile.in  admin_notes.html  bm25.html  collapsing.html  deprecation.html  docsource.mk  facets.html  geospatial.html  glossary.html  index.html  install.html  internals.html  intro_ir.html  matcherdesign.html  overview.html  postingsource.html  queryparser.html  remote.html  replication.html  scalability.html  serialisation.html  sorting.html  spelling.html  stemming.html  synonyms.html  termgenerator.html  tests.html  valueranges.html
docs/apidoc/html/: annotated.html  classXapian_1_1AssertionError-members.html  classXapian_1_1AssertionError.html  classXapian_1_1BB2Weight-members.html  classXapian_1_1BB2Weight.html  classXapian_1_1BM25PlusWeight-members.html  classXapian_1_1BM25PlusWeight.html  classXapian_1_1BM25Weight-members.html  classXapian_1_1BM25Weight.html  classXapian_1_1BoolWeight-members.html  classXapian_1_1BoolWeight.html  classXapian_1_1Compactor-members.html  classXapian_1_1Compactor.html  classXapian_1_1CoordWeight-members.html  classXapian_1_1CoordWeight.html  classXapian_1_1DLHWeight-members.html  classXapian_1_1DLHWeight.html  classXapian_1_1DPHWeight-members.html  classXapian_1_1DPHWeight.html  classXapian_1_1Database-members.html  classXapian_1_1Database.html  classXapian_1_1DatabaseClosedError-members.html  classXapian_1_1DatabaseClosedError.html  classXapian_1_1DatabaseCorruptError-members.html  classXapian_1_1DatabaseCorruptError.html  classXapian_1_1DatabaseCreateError-members.html  classXapian_1_1DatabaseCreateError.html  classXapian_1_1DatabaseError-members.html  classXapian_1_1DatabaseError.html  classXapian_1_1DatabaseLockError-members.html  classXapian_1_1DatabaseLockError.html  classXapian_1_1DatabaseModifiedError-members.html  classXapian_1_1DatabaseModifiedError.html  classXapian_1_1DatabaseNotFoundError-members.html  classXapian_1_1DatabaseNotFoundError.html  classXapian_1_1DatabaseOpeningError-members.html  classXapian_1_1DatabaseOpeningError.html  classXapian_1_1DatabaseVersionError-members.html  classXapian_1_1DatabaseVersionError.html  classXapian_1_1DateRangeProcessor-members.html  (+258 more)
examples/: copydatabase.1  quest.1  xapian-metadata.1  xapian-pos.1
expand/: meson.build
geospatial/: meson.build
include/xapian/: version.h.meson
languages/: arabic.h  armenian.h  basque.h  catalan.h  danish.cc  danish.h  earlyenglish.h  english.cc  finnish.cc  finnish.h  french.cc  french.h  german.cc  german2.cc  german2.h  hungarian.cc  hungarian.h  indonesian.cc  indonesian.h  irish.h  lithuanian.cc  lithuanian.h  lovins.cc  nepali.h  norwegian.cc  porter.cc  porter.h  portuguese.h  romanian.cc  romanian.h  russian.cc  sbl-dispatch.h  spanish.h  swedish.cc  swedish.h  tamil.h  turkish.cc  turkish.h
m4/: libtool.m4
net/: meson.build
queryparser/: queryparser_internal.cc
tests/: Makefile.in  api_all.h  api_anydb.h  api_backend.cc  api_backend.h  api_closedb.h  api_collapse.h  api_collated.h  api_compact.cc  api_compactold.h  api_db.cc  api_db.h  api_generated.cc  api_nodb.h  api_opvalue.h  api_percentages.h  api_posdb.h  api_qpbackend.h  api_query.h  api_queryparser.h  api_replacedoc.h  api_replicate.h  api_serialise.h  api_snippets.h  api_sorting.h  api_spelling.h  api_stem.h  api_transdb.h  api_unicode.h  api_weight.h  meson.build
tests/harness/: testrunner.cc
tests/perftest/: perftest_collated.h  perftest_matchdecider.h  perftest_randomidx.h
tests/soaktest/: soaktest_all.h
unicode/: c_istab.h
weight/: meson.build
xapian-core/: config.h.meson  meson.build
xapian-core/api/: meson.build
xapian-core/backends/inmemory/: meson.build
xapian-core/backends/multi/: meson.build
xapian-core/backends/remote/: meson.build
xapian-core/common/: io_utils.cc  meson.build
xapian-core/include/: meson.build
xapian-core/include/xapian/: meson.build
xapian-core/languages/: allsnowballheaders.h  arabic.cc  armenian.cc  basque.cc  catalan.cc  dutch.cc  dutch.h  earlyenglish.cc  english.h  german.h  irish.cc  italian.cc  italian.h  kraaij_pohlmann.cc  kraaij_pohlmann.h  lovins.h  meson.build  nepali.cc  norwegian.h  portuguese.cc  russian.h  spanish.cc  tamil.cc
xapian-core/matcher/: meson.build
xapian-core/queryparser/: meson.build  queryparser_internal.cc  queryparser_token.h
xapian-core/tests/: api_anydb.h  api_backend.h  api_collated.h  api_compact.cc  api_compact.h  api_generated.h  api_geospatial.h  api_matchspy.h  api_metadata.h  api_nodb.h  api_none.h  api_opsynonym.h  api_postingsource.h  api_query.h  api_scalability.h  api_termgen.h  api_valuestats.h  api_valuestream.h  api_weight.h  api_wrdb.h  meson.build
xapian-core/tests/harness/: meson.build
xapian-core/tests/perftest/: perftest_all.h
xapian-core/tests/soaktest/: soaktest_collated.h  soaktest_queries.h
xapian-core/unicode/: meson.build  unicode-data.cc
