sources += files(
    'compactor.cc',
    'constinfo.cc',
    'decvalwtsource.cc',
    'documentvaluelist.cc',
    'editdistance.cc',
    'emptypostlist.cc',
    'error.cc',
    'errorhandler.cc',
    'expanddecider.cc',
    'keymaker.cc',
    'leafpostlist.cc',
    'matchspy.cc',
    'omdatabase.cc',
    'omdocument.cc',
    'omenquire.cc',
    'positioniterator.cc',
    'postingiterator.cc',
    'postingsource.cc',
    'postlist.cc',
    'query.cc',
    'queryinternal.cc',
    'registry.cc',
    'smallvector.cc',
    'sortable-serialise.cc',
    'termiterator.cc',
    'termlist.cc',
    'valueiterator.cc',
    'valuerangeproc.cc',
    'valuesetmatchdecider.cc',
    'vectortermlist.cc'
)

if get_option('enable-backend-remote')
    sources += files('replication.cc')
endif
