install_headers(files('xapian.h'))

headers = files(
    'xapian/attributes.h',
    'xapian/compactor.h',
    'xapian/constants.h',
    'xapian/constinfo.h',
    'xapian/database.h',
    'xapian/dbfactory.h',
    'xapian/deprecated.h',
    'xapian/derefwrapper.h',
    'xapian/document.h',
    'xapian/enquire.h',
    'xapian/error.h',
    'xapian/errorhandler.h',
    'xapian/eset.h',
    'xapian/expanddecider.h',
    'xapian/intrusive_ptr.h',
    'xapian/iterator.h',
    'xapian/keymaker.h',
    'xapian/matchspy.h',
    'xapian/mset.h',
    'xapian/positioniterator.h',
    'xapian/postingiterator.h',
    'xapian/postingsource.h',
    'xapian/query.h',
    'xapian/queryparser.h',
    'xapian/registry.h',
    'xapian/stem.h',
    'xapian/termgenerator.h',
    'xapian/termiterator.h',
    'xapian/types.h',
    'xapian/unicode.h',
    'xapian/valueiterator.h',
    'xapian/valuesetmatchdecider.h',
    'xapian/geospatial.h',
    'xapian/visibility.h',
    'xapian/weight.h'
)
install_headers(headers, subdir:'xapian')



subdir('xapian')

include_dirs += [include_directories('.')]
