if get_option('enable-backend-remote')
    sources += files('remotesubmatch.cc')
endif

sources += files(
    'andmaybepostlist.cc',
    'andnotpostlist.cc',
    'branchpostlist.cc',
    'collapser.cc',
    'exactphrasepostlist.cc',
    'externalpostlist.cc',
    'localsubmatch.cc',
    'maxpostlist.cc',
    'mergepostlist.cc',
    'msetcmp.cc',
    'msetpostlist.cc',
    'multiandpostlist.cc',
    'multimatch.cc',
    'multixorpostlist.cc',
    'nearpostlist.cc',
    'orpositionlist.cc',
    'orpospostlist.cc',
    'orpostlist.cc',
    'phrasepostlist.cc',
    'selectpostlist.cc',
    'synonympostlist.cc',
    'valuegepostlist.cc',
    'valuerangepostlist.cc',
    'valuestreamdocument.cc'
)
